--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,600i,700');
 @import "cssreset.css";
-@import "landing-page/top-section.css";
+/* @import "landing-page/top-section.css"; */
 @import "landing-page/services.css";
 @import "landing-page/promo.css";
 @import "landing-page/footer.css";
@@ -15,6 +15,10 @@ body{
   max-width: 1400px;
   margin: 0 auto;
   padding: 0 300px;
+}
+#top img{
+  height:500px;
+  width:100%;
 }
 
 header{
